# EA872

./: .gitignore  CMakeLists.txt  README.md
config/: cop.ini  entity.ini  grave.ini  ip_remoto.ini  player.ini  view.ini  zombie.ini
include/controller/: net.hpp  update.hpp
include/model/: entity.hpp  mapa.hpp  player.hpp
include/view/: assets.hpp  view.hpp
src/: INIReader.cpp  ini.c  main.cpp
src/controller/: net.cpp  update.cpp
src/model/: entity.cpp  mapa.cpp  player.cpp  player.ini
src/view/: assets.cpp  view.cpp
